@@ -121,8 +121,6 @@ sub new {
   my $url   = URI::db->new(shift || '');
   my $self  = bless {@_, url => $url}, $class;
 
-  $self->{create_database_command} ||= 'create database %d';
-  $self->{drop_database_command}   ||= 'drop database %d';
   $self->{drop_from_child} //= 1;
   $self->{schema_database} ||= $SCHEMA_DATABASE{$url->canonical_engine};
   $self->{template}        ||= 'tmp_%U_%X_%H%i';
@@ -154,34 +152,24 @@ sub _cleanup {
 sub _create_database {
   my ($self, $name) = @_;
 
-  if (ref $self->{create_database_command} eq 'CODE') {
-    $self->{create_database_command}->($self, $name);
-  }
-  elsif ($self->url->canonical_engine eq 'sqlite') {
+  if ($self->url->canonical_engine eq 'sqlite') {
     require IO::File;
     use Fcntl qw(O_CREAT O_EXCL O_RDWR);
     IO::File->new->open($name, O_CREAT | O_EXCL | O_RDWR) or confess "Can't write $name: $!\n";
   }
   else {
-    my $sql = $self->{create_database_command};
-    $sql =~ s!\%d!$name!g;
-    DBI->connect($self->_schema_dsn)->do($sql);
+    DBI->connect($self->_schema_dsn)->do(sprintf 'create database %s', $name);
   }
 }
 
 sub _drop_database {
   my ($self, $name) = @_;
 
-  if (ref $self->{drop_database_command} eq 'CODE') {
-    $self->{drop_database_command}->($self, $name);
-  }
-  elsif ($self->url->canonical_engine eq 'sqlite') {
+  if ($self->url->canonical_engine eq 'sqlite') {
     unlink $name or confess "unlink $name: $!" if -e $name;
   }
   else {
-    my $sql = $self->{drop_database_command};
-    $sql =~ s!\%d!$name!g;
-    DBI->connect($self->_schema_dsn)->do($sql);
+    DBI->connect($self->_schema_dsn)->do(sprintf 'drop database if exists %s', $name);
   }
 }
 
@@ -432,30 +420,6 @@ Creates a new object after checking the C<$url> is valid. C<%args> can be:
 
 L</create_database> will be called automatically, unless C<auto_create> is
 set to a false value.
-
-=item * create_database_command
-
-Can be set to a custom create database command in the database. The default is
-"create database %d", where %d will be replaced by the generated database name.
-
-For even more control, you can set this to a code ref which will be called like
-this:
-
-  $tmpdb->$cb($database_name);
-
-The default is subject to change.
-
-=item * drop_database_command
-
-Can be set to a custom drop database command in the database. The default is
-"drop database %d", where %d will be replaced by the generated database name.
-
-For even more control, you can set this to a code ref which will be called like
-this:
-
-  $tmpdb->$cb($database_name);
-
-The default is subject to change.
 
 =item * drop_from_child
 
