@@ -3,6 +3,8 @@ Revision history for perl distribution DBIx-TempDB
 0.16 Not Released
  - Add DBIx::TempDB::Util
  - Can clean up temp databases manually
+ - Remove support custom create_database_command
+ - Remove support custom drop_database_command
 
 0.15 2018-07-08T18:57:16+0800
  - Guarantee that database names are lower case #9
